# Plot_figure

./: CHANGELOG.md  LICENSE  README.md  ROIs.csv  USAGE.md  __init__.py  brain_connection_plot.py  brain_plot.py  brain_surface_plot.py  circos_plot.py  common_plot.py  dev.ipynb  example.ipynb  human_glasser.csv  macaque_CHARM6.csv  macaque_charm5.csv  plot_figure.py  pyproject.toml
.github/workflows/: SyncToGitee.yml
FS/NMT/label/: R.charm5.label.gii  lh.charm5_atlas.annot  rh.charm5_atlas.annot
FS/NMT/surf/: rh.inflated
FS/NMT_template/label/: lh.charm1_atlas.annot  lh.charm5_atlas.annot  lh.cortex.label  rh.charm1_atlas.annot  rh.charm5_atlas.annot  rh.cortex.label
FS/NMT_template/mri/: aseg.auto_noCCseg.label_intensities.txt  aseg.auto_noCCseg.mgz  aseg.presurf.mgz  brain.finalsurfs.mgz  brain.mgz  brainmask.mgz  ctrl_pts.mgz  filled.mgz  lh.brain.finalsurfs.mgz  lh.ribbon.mgz  norm.mgz  nu.mgz  rh.brain.finalsurfs.mgz  rh.ribbon.mgz  ribbon.mgz  talairach.label_intensities.txt  wm.asegedit.mgz  wm.mgz  wm.seg.mgz  wm1_shft.1D  wm_eee.mgz
FS/NMT_template/scripts/: recon-all.cmd  recon-all.done  recon-all.env  recon-all.env.bak
FS/NMT_template/seg/: SegmentationConvergence.txt
FS/NMT_template/surf/: lh.area  lh.area.mid  lh.area.pial  lh.avg_curv  lh.curv  lh.curv.pial  lh.curv.stats  lh.defect_borders  (+70 more)
atlas_tables/: human_bna.csv  human_glasser.csv  macaque_CHARM5.csv  macaque_CHARM6.csv  macaque_bna.csv
plotfig/: __init__.py  brain_connection_plot.py  brain_surface_plot.py  common_plot.py
temp/: __init__.py  atlases.py  osf.json  替换这3个文件.txt
(+110 files in other folders)
